--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -78,7 +78,7 @@
   top: 135px !important;
   left: calc(50% + 500px) !important;
   transform: translateX(-50%) !important;
-  z-index: 99999 !important;
+  z-index: 10000 !important;
   width: 500px !important;
   height: 500px !important;
   display: block !important;
